Build out the results class